--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="untoldcoding-details">
           <h2>Birthday Wishes</h2>
           Cheers to 19th You are the best and cutest gurl indeed! Today wishing u a never ending joy, happiness nd Loveeee.
-          Blessed to celebrate this beautiful day frm 3 yrs and many more years of love nd happiness to come. 
+          Blessed to celebrate this beautiful day frm last 3 yrs and many more years of love nd happiness to come. 
           Wishing the best for the rest of your life to mahh special one.
-          HAPPY, HAPPY BIRTHDAY MY MUNCHKIN TE AMO!! Love u loads🫶🏻
+          HAPPY, HAPPY BIRTHDAY MY MUNCHKIN TE AMO!! Love u Loads🫶🏻
 
           <br /><br />
           ---Mauuu♥️
